--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
 services:
-  # neo4j:
-  #   image: neo4j:latest
-  #   container_name: neo4j_container
-  #   volumes:
-  #     - ./database/neo4j/neo4j_data:/data
-  #     - ./database/neo4j/neo4j_logs:/logs
-  #     - ./database/neo4j/neo4j_import:/import
-  #     - ./database/neo4j/neo4j_plugins:/plugins
-  #   environment:
-  #     - NEO4J_AUTH=neo4j/password
-  #     - NEO4J_PLUGINS=["apoc"]
-  #     - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
-  #     - NEO4J_dbms_security_procedures_unrestricted=apoc.*
-  #     - NEO4J_dbms_security_procedures_allowlist=apoc.*
-  #   ports:
-  #     - "7474:7474"
-  #     - "7687:7687"
-  #   restart: always
+  neo4j:
+    image: neo4j:5.20.0 # หรือเวอร์ชันอื่นๆ ที่คุณต้องการ
+    container_name: neo4j_db_local
+    ports:
+      - "7474:7474"
+      - "7687:7687" 
+    volumes:
+      - ./neo4j/data:/data
+      - ./neo4j/logs:/logs
+      - ./neo4j/conf:/conf
+      - ./neo4j/plugins:/plugins
+    environment:
+      - NEO4J_AUTH=neo4j/yourStrongPassword
+      - NEO4J_PLUGINS=["apoc", "graph-data-science"]
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_import_file_use__neo4j__config=true
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*,algo.*
+
+      # --- ใช้ Key การตั้งค่า Memory แบบใหม่สำหรับ Neo4j 5.x ---
+      - server.memory.heap.initial_size=512m
+      - server.memory.heap.max_size=512m
+      - server.memory.pagecache.size=512m
+
+    healthcheck:
+      test: ["CMD-SHELL", "wget --output-document=/dev/null --timeout=10 http://localhost:7474/ || exit 1"]
+      interval: 5s
+      timeout: 10s
+      retries: 10
+
 
   mongo:
     image: mongo:latest
