--- a/.myvenv_py312/pyvenv.cfg
+++ b/.myvenv_py312/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\User\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.7
-executable = C:\Users\User\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\User\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\User\Downloads\ESG-LLM-finetune-and-Graph-RAG-mainesg (5)\ESG-LLM-finetune-and-Graph-RAG-main\.myvenv_py312
+executable = D:\Senior_Project\ESG-LLM-finetune-and-Graph-RAG-mainesg (5)\ESG-LLM-finetune-and-Graph-RAG-main\.myvenv_py312\Scripts\python.exe
+command = D:\Senior_Project\ESG-LLM-finetune-and-Graph-RAG-mainesg (5)\ESG-LLM-finetune-and-Graph-RAG-main\.myvenv_py312\Scripts\python.exe -m venv D:\Senior_Project\ESG-LLM-finetune-and-Graph-RAG-mainesg (5)\ESG-LLM-finetune-and-Graph-RAG-main\.myvenv_py312
