--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - NEO4J_apoc_export_file_enabled=true
       - NEO4J_apoc_import_file_enabled=true
       - NEO4J_apoc_import_file_use__neo4j__config=true
-      - NEO4J_dbms_security_procedures_unrestricted=apoc.*,algo.*
+      - NEO4J_dbms_security_procedures_unrestricted=gds.*,apoc.*
 
       # --- ใช้ Key การตั้งค่า Memory แบบใหม่สำหรับ Neo4j 5.x ---
       - server.memory.heap.initial_size=512m
