--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
 
       # --- CORRECTED & UPDATED MEMORY SETTINGS FOR NEO4J 5.x ---
       # The format is NEO4J_ and dots (.) are replaced with double underscores (__).
-      - NEO4J_server_memory_heap_initial__size=1.5G 
-      - NEO4J_server_memory_heap_max__size=1.5G
-      - NEO4J_server_memory_pagecache_size=1.5G
+      - NEO4J_server_memory_heap_initial__size=2G 
+      - NEO4J_server_memory_heap_max__size=2G
+      - NEO4J_server_memory_pagecache_size=2G
     
     healthcheck:
       test: ["CMD-SHELL", "wget --output-document=/dev/null --timeout=10 http://localhost:7474/ || exit 1"]
